add_library(tinydb_dbfile_internal_base)
target_module_if_enabled(tinydb_dbfile_internal_base
  HEADERS
  page_base.hxx
  heap_base.hxx
  MODULES
  page_base.cxx
  heap_base.cxx
  SOURCES
  page_base.cxx
)
target_link_libraries(tinydb_dbfile_internal_base
  PUBLIC
  tinydb_general
  PRIVATE
  tinydb_compile_opts
)

add_library(tinydb_dbfile_internal)
target_module_if_enabled(tinydb_dbfile_internal
  HEADERS
  page_meta.hxx
  page_serialize.hxx
  btree.hxx
  freelist.hxx
  tbl.hxx
  heap.hxx
  MODULES
  page.cxx
  page_meta.cxx
  page_serialize.cxx
  btree.cxx
  freelist.cxx
  tbl.cxx
  heap.cxx
  SOURCES
  page_meta.cxx
  page_serialize.cxx
  btree.cxx
  freelist.cxx
  tbl.cxx
  heap.cxx
)
target_link_libraries(tinydb_dbfile_internal
    PUBLIC
    tinydb_general
    tinydb_coltype
    tinydb_dbfile_internal_base
    PRIVATE
    tinydb_compile_opts
)
if(tinydb_ENABLE_UNIT_TEST)
  add_subdirectory(test)
endif()
